--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "moment": "^2.29.2",
+    "native-base": "^3.4.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
-    "react-native-ble-plx": "^2.0.3"
+    "react-native-base": "^1.1.0",
+    "react-native-base64": "^0.2.1",
+    "react-native-ble-manager": "^8.0.2",
+    "react-native-ble-plx": "^2.0.3",
+    "react-native-safe-area-context": "^4.2.4",
+    "react-native-svg": "^12.3.0",
+    "react-native-web": "^0.17.7",
+    "react-select": "^5.3.0",
+    "rxjs": "^7.5.5",
+    "xstream": "^11.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
