--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "moment": "^2.29.2",
+    "momentjs": "^2.0.0",
     "native-base": "^3.4.1",
     "react": "17.0.2",
     "react-native": "0.68.0",
@@ -18,6 +19,7 @@
     "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^8.0.2",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7",
