--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "moment": "^2.29.2",
     "momentjs": "^2.0.0",
     "native-base": "^3.4.1",
@@ -21,6 +23,7 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^4.2.4",
+    "react-native-screens": "^3.13.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "^0.17.7",
     "react-select": "^5.3.0",
