--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "d3-shape": "^3.1.0",
     "moment": "^2.29.2",
     "momentjs": "^2.0.0",
     "native-base": "^3.4.1",
@@ -21,10 +23,14 @@
     "react-native-base64": "^0.2.1",
     "react-native-ble-manager": "^8.0.2",
     "react-native-ble-plx": "^2.0.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-share": "^7.3.9",
     "react-native-svg": "^12.3.0",
+    "react-native-svg-charts": "^5.4.0",
+    "react-native-view-shot": "^3.1.2",
     "react-native-web": "^0.17.7",
     "react-select": "^5.3.0",
     "rxjs": "^7.5.5",
