--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "d3-shape": "^3.1.0",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "momentjs": "^2.0.0",
     "native-base": "^3.4.1",
     "react": "17.0.2",
@@ -25,6 +25,7 @@
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-html-to-pdf": "^0.12.0",
+    "react-native-image-base64": "^0.1.4",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-share": "^7.3.9",
