lecture de la configuration en fonction des registres

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@types/debug": "^4.1.7",
+    "@types/npm": "^7.19.0",
     "d3-shape": "^3.1.0",
+    "debug": "^4.3.4",
+    "jsmodbus": "^4.0.6",
     "moment": "^2.29.3",
     "momentjs": "^2.0.0",
     "native-base": "^3.4.1",
