--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-ble-manager": "^8.0.2",
     "react-native-ble-plx": "^2.0.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-base64": "^0.1.4",
     "react-native-safe-area-context": "^4.2.4",
