--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.6.1",
     "@types/debug": "^4.1.7",
     "@types/npm": "^7.19.0",
+    "crc": "^4.1.1",
     "d3-shape": "^3.1.0",
     "debug": "^4.3.4",
     "jsmodbus": "^4.0.6",
